WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
183990
background-size should not accept negative values
https://bugs.webkit.org/show_bug.cgi?id=183990
Summary
background-size should not accept negative values
Eric Willigers
Reported
2018-03-24 21:15:09 PDT
WebKit (and Blink) currently accepts negative background-size.
https://jsfiddle.net/ericwilligers/2wzwt55t/
Spec: Negative values are not allowed.
https://drafts.csswg.org/css-backgrounds/#background-size
Attachments
Patch
(7.79 KB, patch)
2020-11-01 10:08 PST
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2018-03-27 14:39:55 PDT
<
rdar://problem/38928257
>
Eric Willigers
Comment 2
2018-08-03 22:12:46 PDT
Blink (like Edge and Firefox) now rejects negative background-size.
https://chromium-review.googlesource.com/c/chromium/src/+/989529
Tyler Wilcock
Comment 3
2020-11-01 10:08:37 PST
Created
attachment 412863
[details]
Patch
EWS
Comment 4
2020-11-01 12:14:23 PST
Committed
r269237
: <
https://trac.webkit.org/changeset/269237
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 412863
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug