background-size should not accept negative values https://bugs.webkit.org/show_bug.cgi?id=183990

Patch by Tyler Wilcock <twilco.o@protonmail.com> on 2020-11-01
Reviewed by Darin Adler.

LayoutTests/imported/w3c:

We now reject negative values for background-size.  Update newly
passing test expectations to reflect this.

* web-platform-tests/css/css-backgrounds/parsing/background-size-computed-expected.txt:
* web-platform-tests/css/css-backgrounds/parsing/background-size-invalid-expected.txt:

Source/WebCore:

Reject negative background-size length-percentage values,
as these are explicitly disallowed by the spec.

https://www.w3.org/TR/2017/CR-css-backgrounds-3-20171017/#the-background-size

Change is covered by existing tests that now pass.

* css/parser/CSSPropertyParser.cpp:
(WebCore::consumeBackgroundSize): Reject negative length-percentage
values as is mandated by the spec.

LayoutTests:

We now reject negative background-size values.  Update newly passing
test expectations to reflect this.

* TestExpectations:

Canonical link: https://commits.webkit.org/231096@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269237 268f45cc-cd09-0410-ab3c-d52691b4dbfc